[package]
name = 'imgref-iter'
version = '0.1.0'
authors = ['LoganDark']
edition = '2021'
rust-version = '1.56'
description = 'A small crate for iterating over the rows or columns of `imgref` buffers'
documentation = 'https://docs.rs/imgref-iter'
readme = 'README.md'
repository = 'https://github.com/LoganDark/imgref-iter'
license = 'MIT'
keywords = ['imgref', 'iter', 'row', 'col', 'column']
categories = ['rust-patterns']
exclude = ['.idea']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgref = '^1.9.2'
